src/test/resources/inspections/codeError/FileClassnameCaseInspection/MultiClasses.php
<?php

class <error descr="🔨 PHP Hammer: class name (\"A\") does not match the file that stores it (\"MultiClasses.php\").">A</error>
{
}

class <error descr="🔨 PHP Hammer: class name (\"B\") does not match the file that stores it (\"MultiClasses.php\").">B</error>
{
}
